--- a/preEntrega01_React/src/components/Navbar/Navbar.css
+++ b/preEntrega01_React/src/components/Navbar/Navbar.css
@@ -1,17 +1,25 @@
 nav{
-    background-color: #161515;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
     padding: 20px;
+    border-bottom: 1px solid black;
+    box-shadow: 2px 2px 10px black;
     & h1{
         font-size: 2rem;
         color: tomato;
         text-align: center;
     }
     .navbar__menu{
-        display: flex;
-        justify-content: center;
-        & a {
-            margin: 20px;
-            color: white;
+        
+        &  a{
+            text-decoration: none;
+            margin: 10px;
+            padding: 20px;
+            color: black;
+            
         }
     }
    
